--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       <li><a href="task-04.html">Задание 4</a></li>
       <li><a href="task-05.html">Задание 5</a></li>
       <li><a href="task-06.html">Задание 6</a></li>
-      <!-- <li><a href="task-07.html">Задание 7</a></li>
-      <li><a href="task-08.html">Задание 8</a></li> -->
+      <li><a href="task-07.html">Задание 7</a></li>
+      <!-- <li><a href="task-08.html">Задание 8</a></li> -->
     </ul>
   </body>
 </html>
